Fix uppgift4